--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <select id="teamLeader" name="teamLeader">
       <option value="Venkatesh J">Venkatesh J</option>
       <option value="Afash Mohammad">Afash Mohammad</option>
+      <option value="None">None</option>
     </select>
 
     <h2>Customer Details</h2>
