--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <option value="Mallesh Naidu">Mallesh Naidu</option>
       <option value="Venkatesh J">Venkatesh J</option>
       <option value="Venu J">Venu J</option>
+      <option value="Venu J">Reference</option>
     </select>
 
     <label for="teamLeader">Team Leader Involved:</label>
