--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <label for="ceiling">Ceiling:</label>
       <select id="ceiling" name="ceiling">
         <option value="Strip Light">Strip Light</option>
-        <option value="Square Light">Square Light</option>
+        <option value="Spot Light">Spot Light</option>
       </select>
     </div>
 
