--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <option value="Elegance">Elegance</option>
         </select>
 
-        <label for="glassWall">Glass Wall:</label>
+        <label for="glassWall">Glass Wall in Cabin:</label>
         <select id="glassWall" name="glassWall">
           <option value="Yes">Yes</option>
           <option value="No">No</option>
@@ -191,6 +191,28 @@
       <select id="ceiling" name="ceiling">
         <option value="Strip Light">Strip Light</option>
         <option value="Spot Light">Spot Light</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="doortype">Door Type:</label>
+      <select id="doortype" name="doortype">
+        <option value="Strip Light">Full Vision Automatic Glass Doors</option>
+        <option value="Spot Light">Half Vision Automatic Glass Doors</option>
+        <option value="Spot Light">Mini Vision Automatic Glass Doors</option>
+        <option value="Spot Light">SS Plain Automatic Doors</option>
+        <option value="Spot Light">Swing Full Glass Doors</option>
+        <option value="Spot Light">collapsable Doors</option>
+      </select>
+    </div>
+    <label for="DoorOpening">Door Opening:</label>
+    <input type="text" id="DoorOpening" name="DoorOpening">
+
+    <div>
+      <label for="CabinFlooring">Cabin Flooring:</label>
+      <select id="CabinFlooring" name="CabinFlooring">
+        <option value="BlueVinyl">Blue Vinyl</option>
+        <option value="WoodVinyl">Wood Vinyl</option>
       </select>
     </div>
 
