--- a/index.html
+++ b/index.html
@@ -291,14 +291,53 @@
     </div>
 
     <div>
-      <label for="authentication">Authentication:</label><br>
-      <select id="authentication" name="authentication">
-        <option value="rfid">RFID</option>
-        <option value="pin">PIN</option>
-        <option value="authenticationNone">None</option>
+      <label for="Stabiliser">Stabiliser:</label><br>
+      <select id="Stabiliser" name="Stabiliser">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
       </select>
     </div>
 
+    <div>
+      <label for="StorageofMaterial">Storage of Material:</label><br>
+      <select id="StorageofMaterial" name="StorageofMaterial">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="Scaffolding">Scaffolding:</label><br>
+      <select id="Scaffoldig" name="Scaffolding">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="Scaffolding">Scaffolding:</label><br>
+      <select id="Scaffoldig" name="Scaffolding">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="AnyCivilWorks">Any Civil Works:</label><br>
+      <select id="AnyCivilWorks" name="AnyCivilWorks">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="GlassforShaft ">Glass for Shaft:</label><br>
+      <select id="GlassforShaft" name="GlassforShaft">
+        <option value="Brio">Brio</option>
+        <option value="customer">Customer</option>
+      </select>
+    </div>
+    
     <div>
       <label for="authenticationNeed">Authentication Need:</label><br>
       <input type="text" id="authenticationNeed" name="authenticationNeed"><br>
