--- a/index.html
+++ b/index.html
@@ -339,12 +339,14 @@
     </div>
     
     <div>
-      <label for="authenticationNeed">Authentication Need:</label><br>
-      <input type="text" id="authenticationNeed" name="authenticationNeed"><br>
+      <label for="warranty">Warranty:</label><br>
+      <input type="text" id="warranty" name="warranty"><br>
     </div>
 
-    <label for="remarks">Additional Remarks:</label>
-    <textarea id="remarks" name="remarks"></textarea>
+    <div>
+      <label for="service">Service:</label><br>
+      <input type="text" id="service" name="service"><br>
+    </div>
     
     <h2>Upload Photos</h2>
       <p>Please hold down the <strong>Ctrl</strong> (or <strong>Cmd</strong> on Mac) key to select multiple images.</p>
