--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
       <input type="text" id="authenticationNeed" name="authenticationNeed"><br>
     </div>
 
-    <label for="remarks">Additional Remarks:</label>
-    <textarea id="remarks" name="remarks"></textarea>
+    
 
 
     <h2>Terms of Sale</h2>
@@ -314,24 +313,9 @@
       </select>
     </div>
 
-    <div>
-      <label for="Scaffolding">Scaffolding:</label><br>
-      <select id="Scaffoldig" name="Scaffolding">
-        <option value="Brio">Brio</option>
-        <option value="customer">Customer</option>
-      </select>
-    </div>
 
     <div>
-      <label for="AnyCivilWorks">Any Civil Works:</label><br>
-      <select id="AnyCivilWorks" name="AnyCivilWorks">
-        <option value="Brio">Brio</option>
-        <option value="customer">Customer</option>
-      </select>
-    </div>
-
-    <div>
-      <label for="GlassforShaft ">Glass for Shaft:</label><br>
+      <label for="GlassforShaft ">Glass / ACP for Shaft:</label><br>
       <select id="GlassforShaft" name="GlassforShaft">
         <option value="Brio">Brio</option>
         <option value="customer">Customer</option>
@@ -370,6 +354,9 @@
       
       <label for="remainingPhotos">Remaining Images:</label>
       <input type="file" id="remainingPhotos" name="remainingPhotos" accept="image/*" multiple><br>
+
+      <label for="remarks">Additional Remarks:</label>
+      <textarea id="remarks" name="remarks"></textarea>
 
 
      <button type="button" onclick="downloadPDF()">Download as PDF</button>
