--- a/index.html
+++ b/index.html
@@ -434,10 +434,15 @@
       <textarea id="remarks" name="remarks"></textarea>
 
       <div>
-      <label for="approved">OTF & Quotation Approved by:</label><br>
-      <input type="text" id="approved" name="approved"><br>
+      <label for="otfapproved">OTF Approved by:</label><br>
+      <input type="text" id="otfapproved" name="otfapproved"><br>
       </div>
 
+      <div>
+      <label for="quotationapproved">Quotation Approved by:</label><br>
+      <input type="text" id="quotationapproved" name="quotationapproved"><br>
+      </div>
+    
      <button type="button" onclick="downloadPDF()">Download as PDF</button>
   </div>
 <!-- Include external JS  -->
