--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     </div>
 
     <div>
-      <label for="whileplacingorder">While Placing Order(will provide Drawings):</label><br>
+      <label for="whileplacingorder">While Placing Order:</label><br>
       <input type="text" id="whileplacingorder" name="whileplacingorder"><br>
     </div>
 
