--- a/index.html
+++ b/index.html
@@ -399,13 +399,20 @@
     <h3>Documents Collected</h3>
     <div>
       <label for="quotation">Original Signed Quotation:</label><br>
-      <input type="text" id="quotation" name="quotation"><br>
+      <select id="quotation" name="quotation">
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+      </select><br>
     </div>
 
-    <div>
-      <label for="pan">PAN Card Copy Of Customer:</label><br>
-      <input type="text" id="pan" name="pan"><br>
-    </div>
+  <div>
+  <label for="pan">PAN Card Copy Of Customer:</label><br>
+  <select id="pan" name="pan">
+  <option value="yes">Yes</option>
+  <option value="no">No</option>
+  </select><br>
+  </div>
+
     
     <h2>Upload Photos</h2>
       <p>Please hold down the <strong>Ctrl</strong> (or <strong>Cmd</strong> on Mac) key to select multiple images.</p>
