--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brio Elevators OTF Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles1.css">
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="brio-2.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="brio-2.png" />
