--- a/index1.html
+++ b/index1.html
@@ -442,12 +442,18 @@
 
       <div>
       <label for="quotationapproved">Quotation Approved by:</label><br>
-      <input type="text" id="quotationapproved" name="quotationapproved"><br>
+      <select id="quotationapproved" name="quotationapproved">
+      <option value="Venkatesh J">Yes</option>
+      <option value="Afash Mohammad">No</option>
+      </select><br>
       </div>
     
       <div>
       <label for="otfapproved">OTF Approved by:</label><br>
-      <input type="text" id="otfapproved" name="otfapproved"><br>
+      <select id="otfapproved" name="otfapproved">
+      <option value="AfashMohammad">Afash Mohammad</option>
+       <option value="SayeedShaik">Sayeed Shaik</option>
+      </select><br>
       </div>
 
       
