--- a/index1.html
+++ b/index1.html
@@ -443,8 +443,8 @@
       <div>
       <label for="quotationapproved">Quotation Approved by:</label><br>
       <select id="quotationapproved" name="quotationapproved">
-      <option value="Venkatesh J">Yes</option>
-      <option value="Afash Mohammad">No</option>
+      <option value="VenkateshJ">Venkatesh J</option>
+      <option value="AfashMohammad">Afash Mohammad</option>
       </select><br>
       </div>
     
