--- a/index1.html
+++ b/index1.html
@@ -461,6 +461,6 @@
   </div>
 <!-- Include external JS  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="script.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
