--- a/index1.html
+++ b/index1.html
@@ -126,6 +126,12 @@
     <label for="floorToFloorDistance">Floor to Floor Distance (mm):</label>
     <input type="text" id="floorToFloorDistance" name="floorToFloorDistance">
 
+    <label for="motortype">Motor Type:</label>
+    <select id="motortype" name="motortype">
+      <option value="singlephase">Single Phase (1-Phase)</option>
+      <option value="threephase">Three Phase (3-Phase)</option>
+    </select>
+    
     <label for="payload">Payload (kg):</label>
     <input type="text" id="payload" name="payload">
 
