--- a/index1.html
+++ b/index1.html
@@ -22,6 +22,7 @@
       <option value="Mallesh Naidu">Mallesh Naidu</option>
       <option value="Venkatesh J">Venkatesh J</option>
       <option value="Venu J">Venu J</option>
+      <option value="Haji">Haji</option>
     </select>
 
     <label for="teamLeader">Team Leader Involved:</label>
@@ -65,7 +66,7 @@
     <label for="email">Email ID:</label>
     <input type="email" id="email" name="email">
 
-    <label for="alternateContactName">Alternate Contact Name:</label>
+    <label for="alternateContactName">Alternate Contact Person Name:</label>
     <input type="text" id="alternateContactName" name="alternateContactName">
 
     <label for="alternateContactNumber">Alternate Contact Number:</label>
@@ -213,8 +214,8 @@
         <option value="Spot Light">Half Vision Automatic Glass Doors</option>
         <option value="Spot Light">Mini Vision Automatic Glass Doors</option>
         <option value="Spot Light">SS Plain Automatic Doors</option>
-        <option value="Spot Light">Swing Full Glass Doors</option>
-        <option value="Spot Light">collapsable Doors</option>
+        <option value="Spot Light">Swing Full Glass Doors (manual)</option>
+        <option value="Spot Light">Collapsible Doors</option>
       </select>
     </div>
     <label for="DoorOpening">Door Opening (in mm):</label>
