--- a/index.html
+++ b/index.html
@@ -483,6 +483,6 @@
 <!-- Include jsPDF autoTable Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 
-  <script src="script1.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
