--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <option value="Spandana>Spandana</option>
     </select>
 
-    <label for="Refferedby">Reffered by:</label>
+    <label for="Refferedby">Referred by:</label>
     <input type="text" id="Refferedby" name="Refferedby">
    
 
