--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <option value="Afash Mohammad">Afash Mohammad</option>
       <option value="None_teamleader">None</option>
     </select>
-
+    
     <label for="Crmperson">CRM Person:</label>
     <select id="Crmperson" name="Crmperson">
       <option value="Mallesh Naidu">Mallesh</option>
-      <option value="Spandana>Spandana</option>
+      <option value="Spandana">Spandana</option>
     </select>
 
     <label for="Refferedby">Referred by:</label>
