--- a/index.html
+++ b/index.html
@@ -162,25 +162,25 @@
     </select>
 
     <h2>Cabin Details</h2>
-    <div class="Cabin-container">
-  <div class="Cabin-details">
-    <label for="CabinType">Cabin Type:</label>
-    <select id="CabinType" name="CabinType">
-      <option value="Classic">Classic</option>
-      <option value="Pro">Pro</option>
-      <option value="Elegance">Elegance</option>
-    </select>
+<div class="cabin-container">
+    <div class="cabin-details">
+        <label for="CabinType">Cabin Type:</label>
+        <select id="CabinType" name="CabinType">
+            <option value="Classic">Classic</option>
+            <option value="Pro">Pro</option>
+            <option value="Elegance">Elegance</option>
+        </select>
 
-    <label for="GlassWall">Glass Wall in Cabin:</label>
-    <select id="GlassWall" name="GlassWall">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select>
-  </div>
+        <label for="GlassWall">Glass Wall in Cabin:</label>
+        <select id="GlassWall" name="GlassWall">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+        </select>
+    </div>
 
-  <div class="Cabin-image">
-    <img src="cabin.png" alt="Cabin-image">
-  </div>
+    <div class="cabin-image">
+        <img src="cabin.png" alt="Cabin-image">
+    </div>
 </div>
 
     <div>
