--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="header">
     <img src="logo.png" alt="Brio Logo" style="float: left; width: 100px; height: auto;">
     <h1>Brio Elevators OTF Form</h1>
+    </div>
 
     <h2>Sales Team</h2>
     <label for="Salesperson">Sales Person:</label>
