--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
     
     <h2>Upload Photos</h2>
-      <p>Please hold down the <strong>Ctrl</strong> (or <strong>Cmd</strong> on Mac) key to select multiple images.</p>
+      <p>Please hold down the <strong>Ctrl</strong> (<strong>Cmd</strong> on Mac) key to select multiple images.</p>
       <label for="Buildingphotos">Building/Site:</label>
       <input type="file" id="Buildingphotos" name="Buildingphotos" accept="image/*" multiple><br>
       
