--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 
     <h2>Terms of Sale</h2>
-    <h3>Payment Treams</h3>
+    <h3>Payment Terms</h3>
     <div>
       <label for="Basiccostoflift">Basic Cost of the Lift:</label><br>
       <input type="text" id="Basiccostoflift" name="Basiccostoflift"><br>
@@ -366,8 +366,8 @@
     </div>
 
     <div>
-      <label for="Stabiliser">Stabiliser:</label><br>
-      <select id="Stabiliser" name="Stabiliser">
+      <label for="Stabilizer">Stabilizer:</label><br>
+      <select id="Stabilizer" name="Stabilizer">
         <option value="Brio">Brio</option>
         <option value="Customer">Customer</option>
       </select>
