--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <label for="Crmperson">CRM Person:</label>
     <select id="Crmperson" name="Crmperson">
-      <option value="Mallesh Naidu">Mallesh</option>
+      <option value="Mallesh Naidu">Mallesh Naidu</option>
       <option value="Spandana">Spandana</option>
     </select>
 
