--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <input type="Email" id="Email" name="Email">
 
     <label for="Alternatecontactpersonname">Alternate Contact Person Name:</label>
-    <input type="text" id="Alternatecontactname" name="Alternatecontactname">
+    <input type="text" id="Alternatecontactpersonname" name="Alternatecontactname">
 
     <label for="Alternatecontactnumber">Alternate Contact Number:</label>
     <input type="text" id="Alternatecontactnumber" name="Alternatecontactnumber">
