--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
   </select><br>
   </div>
 
-    
+    <!--
     <h2>Upload Photos</h2>
       <p>Please hold down the <strong>Ctrl</strong> (<strong>Cmd</strong> on Mac) key to select multiple images.</p>
       <label for="Buildingphotos">Building/Site:</label>
@@ -448,7 +448,7 @@
       <input type="file" id="Selectedcelling" name="Selectedcelling" accept="image/*" multiple><br>
       
       <label for="Remainingphotos">Remaining Images:</label>
-      <input type="file" id="Remainingphotos" name="Remainingphotos" accept="image/*" multiple><br>
+      <input type="file" id="Remainingphotos" name="Remainingphotos" accept="image/*" multiple><br> -->
 
       <label for="Additional_remarks">Additional Remarks:</label>
       <textarea id="Additional_remarks" name="Additional_remarks"></textarea>
