--- a/index.html
+++ b/index.html
@@ -20,14 +20,23 @@
     <h2>Sales Team</h2>
     <label for="Salesperson">Sales Person:</label>
     <select id="Salesperson" name="Salesperson">
-      <option value="Nandhini Nath">Nandhini Nath</option>
+      <option value="Azeez Sk">Azeez Sk</option>
+      <option value="B Dinesh Teja">B Dinesh Teja</option>
+      <option value="Kumpatla Ravi Teja">Kumpatla Ravi Teja</option>
       <option value="Mallesh Naidu">Mallesh Naidu</option>
-      <option value="Venkatesh J">Venkatesh J</option>
-      <option value="Venu J">Venu J</option>
-      <option value="Haji">Haji</option>
+      <option value="Mohammed Haji">Mohammed Haji</option>
+      <option value="Nandhini Nath">Nandhini Nath</option>
       <option value="Naresh Dev">Naresh Dev</option>
-      <option value="Azeez">Azeez</option>
-      <option value="Nilofor">Nilofor</option>
+      <option value="Nilofar A">Nilofar A</option>
+      <option value="Rajamani Dhanavelu">Rajamani Dhanavelu</option>
+      <option value="Sankar B">Sankar B</option>
+      <option value="Sayeed Shaik">Sayeed Shaik</option>
+      <option value="Spandana Reddy">Spandana Reddy</option>
+      <option value="Ujwal">Ujwal</option>
+      <option value="Venugopal J">Venugopal J</option>
+      <option value="Ujwal">Ujwal</option>
+      <option value="Vigneshwaran R">Vigneshwaran R</option>
+      <option value="None">None</option>
     </select>
 
     <label for="TeamLeader">Team Leader Involved:</label>
