--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <label for="Crmperson">CRM Person:</label>
     <select id="Crmperson" name="Crmperson">
       <option value="Mallesh Naidu">Mallesh Naidu</option>
-      <option value="Spandana">Spandana</option>
+      <option value="Spandana Reddy">Spandana Reddy</option>
     </select>
 
     <label for="Refferedby">Referred by:</label>
