--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
     <label for="Model">Model:</label>
     <select id="Model" name="Model">
-      <option value="Monteluxe-gearlessbelt">Monte Luxe-Gearless Belt</option>
-      <option value="Ritz-grealeesrope">Ritz-Grealees Rope</option>
-      <option value="Vista-hydraulic">Vista-Hydraulic</option>
-      <option value="Briocommercial-mobilityseries">Brio Commercial-Mobility Series</option>
+      <option value="Monte Luxe-Gearless Belt">Monte Luxe-Gearless Belt</option>
+      <option value="Ritz-Grealees Rope">Ritz-Grealees Rope</option>
+      <option value="Vista-Hydraulic">Vista-Hydraulic</option>
+      <option value="Brio Commercial-Mobility Series">Brio Commercial-Mobility Series</option>
     </select>
 
     <label for="Structure">Structure:</label>
@@ -221,12 +221,12 @@
     <div>
       <label for="Doortype">Door Type:</label>
       <select id="Doortype" name="Doortype">
-        <option value="Fullvisionautomaticglassdoors">Full Vision Automatic Glass Doors</option>
-        <option value="Halfvisionautomaticglassdoors">Half Vision Automatic Glass Doors</option>
-        <option value="Minivisionautomatiocglassdoors">Mini Vision Automatic Glass Doors</option>
-        <option value="Ssplainautomaticdoors">SS Plain Automatic Doors</option>
-        <option value="Swingfullglassdoors">Swing Full Glass Doors (manual)</option>
-        <option value="Collapsibledoors">Collapsible Doors</option>
+        <option value="Full Vision Automatic Glass Doors">Full Vision Automatic Glass Doors</option>
+        <option value="Half Vision Automatic Glass Doors">Half Vision Automatic Glass Doors</option>
+        <option value="Mini Vision Automatic Glass Doors">Mini Vision Automatic Glass Doors</option>
+        <option value="SS Plain Automatic Doors">SS Plain Automatic Doors</option>
+        <option value="Swing Full Glass Doors (manual)">Swing Full Glass Doors (manual)</option>
+        <option value="Collapsible Doors">Collapsible Doors</option>
       </select>
     </div>
     <label for="Dooropening">Door Opening (mm):</label>
@@ -235,28 +235,28 @@
     <div>
       <label for="Cabinflooring">Cabin Flooring:</label>
       <select id="Cabinflooring" name="Cabinflooring">
-        <option value="Bluevinyl">Blue Vinyl</option>
-        <option value="Woodvinyl">Wood Vinyl</option>
+        <option value="Blue Vinyl">Blue Vinyl</option>
+        <option value="Wood Vinyl">Wood Vinyl</option>
       </select>
     </div>
 
     <h2>Additional Features</h2>
     <label for="Safetyalarm">Safety Alarm:</label>
     <select id="Safetyalarm" name="Safetyalarm">
-      <option value="Safetyalarmyes">Yes</option>
-      <option value="Safetyalarmno">No</option>
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
     </select>
 
     <label for="Intercomphone">Intercom Phone:</label>
     <select id="Intercomphone" name="Intercomphone">
-      <option value="Intercomphoneyes">Yes</option>
-      <option value="Intercomphoneno">No</option>
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
     </select>
 
     <label for="Voiceannouncer">Voice Announcer:</label>
     <select id="Voiceannouncer" name="Voiceannouncer">
-      <option value="Voiceannounceryes">Yes</option>
-      <option value="Voiceannouncerno">No</option>
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
     </select>
 
     <h2>COP/LOP Details</h2>
@@ -264,9 +264,9 @@
     <div>
       <label for="CopLop">COP/LOP:</label>
       <select id="CopLop" name="CopLop">
-        <option value="Button">Button</option>
-        <option value="Touch">Touch Panels</option>
-        <option value="Fulltouchvision">Full Touch Vision</option>
+        <option value="Button Panels">Button Panels</option>
+        <option value="Touch Panels">Touch Panels</option>
+        <option value="Full Touch Vision">Full Touch Vision</option>
       </select>
     </div>
 
@@ -281,9 +281,9 @@
     <div>
       <label for="Authentication">Authentication:</label>
       <select id="Authentication" name="Authentication">
-        <option value="Rfid">RFID</option>
-        <option value="Pin">PIN</option>
-        <option value="Authenticationnone">None</option>
+        <option value="RFID">RFID</option>
+        <option value="PIN">PIN</option>
+        <option value="None">None</option>
       </select>
     </div>
 
