--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
     <label for="Motortype">Motor Type:</label>
     <select id="Motortype" name="Motortype">
-      <option value="Singlephase">Single Phase (1-Phase)</option>
-      <option value="Threephase">Three Phase (3-Phase)</option>
+      <option value="Single Phase (1-Phase)">Single Phase (1-Phase)</option>
+      <option value="Three Phase (3-Phase)">Three Phase (3-Phase)</option>
     </select>
     
     <label for="Payload">Payload (kg):</label>
