--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <label for="Structurecovering">Structure Covering:</label>
     <select id="Structurecovering" name="Structurecovering">
-      <option value="Acp">ACP</option>
+      <option value="ACP">ACP</option>
       <option value="Glass">Glass</option>
       <option value="None_structurecovering">None</option>
     </select>
